// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Fit /> component > renders properly 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; inset: 100% auto auto 0px;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given React component as child 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; inset: 100% auto auto 0px;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given element with ref prop as child 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; inset: 100% auto auto 0px;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given mainAxis = "x" 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; width: 0px; inset: 0px auto auto 100%;"
    />
  </span>
</div>
`;

exports[`<Fit /> component > renders properly given mainAxis = "y" 1`] = `
<div
  style="position: relative;"
>
  <span
    style="display: contents;"
  >
    <span
      style="position: absolute; inset: 100% auto auto 0px;"
    />
  </span>
</div>
`;
